Update App.java
Correccion metodos