@@ -19,66 +19,49 @@ public class App {
     }
     
 
-    public void uploadChallenge() {
+    public boolean uploadChallenge(String title, String description) {
+        if (usuario == null || title == null || description == null || title.isBlank() || description.isBlank()) {
+            return false;
+        }
         try {
             String id = UUID.randomUUID().toString();
-            String title = JOptionPane.showInputDialog(null, "Título del reto:");
-            String description = JOptionPane.showInputDialog(null, "Descripción del reto:");
-            if (title == null || title.trim().isEmpty() || description == null || description.trim().isEmpty()) {
-                JOptionPane.showMessageDialog(null, "Datos incompletos.");
-                return;
-            }
-
             Challenge challenge = new Challenge(id, title, description, usuario.getUsername());
             challengesController.addData(challenge);
             challengesDataHandler.save(challengesController.getData());
-
-            JOptionPane.showMessageDialog(null, "Reto subido exitosamente.");
+            return true;
         } catch (Exception e) {
-            JOptionPane.showMessageDialog(null, "Error al subir reto: " + e.getMessage());
+        return false;
         }
     }
 
 
-    public void addSolution(Challenge challenge) {
-         try {
-            String solutionText = JOptionPane.showInputDialog(null, "Escribe tu solución para el reto:\n" + challenge.getTitle());
-
-            if (solutionText == null || solutionText.trim().isEmpty()) {
-                JOptionPane.showMessageDialog(null, "Solución vacía.");
-                return;
-            }
-
+    public boolean addSolution(Challenge challenge, String solutionText) {
+        if (challenge == null || solutionText == null || solutionText.isBlank()) {
+            return false;
+        }
+        try {
             challenge.addLike(); 
             challengesDataHandler.save(challengesController.getData());
-
-            JOptionPane.showMessageDialog(null, "¡Solución registrada! El reto recibió un like.");
+            return true;
         } catch (Exception e) {
-            JOptionPane.showMessageDialog(null, "Error al agregar solución: " + e.getMessage());
+            return false;
         }
     }
-
     
-    public void uploadQuest() {
+    public boolean uploadQuest(String title, String description) {
+        if (usuario == null || title == null || description == null || title.isBlank() || description.isBlank()) {
+            return false;
+        }
         try {
             String id = UUID.randomUUID().toString();
-            String title = JOptionPane.showInputDialog(null, "Título de la pregunta:");
-            String description = JOptionPane.showInputDialog(null, "Descripción de la pregunta:");
-            if (title == null || title.trim().isEmpty() || description == null || description.trim().isEmpty()) {
-                JOptionPane.showMessageDialog(null, "Datos incompletos.");
-                return;
-            }
-
             Quest quest = new Quest(id, title, description, usuario.getUsername());
             questsController.addData(quest);
             questsDataHandler.save(questsController.getData());
-
-            JOptionPane.showMessageDialog(null, "Pregunta subida exitosamente.");
+            return true;
         } catch (Exception e) {
-            JOptionPane.showMessageDialog(null, "Error al subir la pregunta: " + e.getMessage());
+            return false;
         }
     }
-
     
     public List<Challenge> showTopChallenges() {
         return challengesController.getData();
